# FeetSegmentation

./: .gitignore  .gitmodules
Metrics/: dice.csv  jaccard.csv  metrics.ipynb
PointCloudSegmentation/PointCloudSeg/: .gitignore  CMakeLists.txt  main.cpp
SegNet/: augmentation.ipynb  pre-procesing.ipynb
SkinSegmentation/: skin_segmentation.py
TernausNet/: segmentation.ipynb
